# Test_assigment0203

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py  database.py  main.py
app/api/: message_api.py  router.py  websocket.py
app/models/: chat.py  message.py  user.py
app/repositories/: base_repo.py  chat_repo.py  message_repo.py  user_repo.py
app/schemas/: chat_schema.py  message_schema.py  user_schema.py  websocket_schema.py
app/services/: chat_service.py  message_service.py  websocket_service.py
app/tests/: test_websocket.py
app/tests/fixtures/: data.py
app/utils/: create_test_data.py  logger.py
migrations/: env.py
migrations/versions/: 456b9ad433e2_init.py  5fbb731927b2_simplify_messages_table.py
